--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     RayWilliamJohnson,FGTV,KaicenatLive,IShowSpeed,Jelly,DanTDM,KSI,LoganPaul,JackSucksAtLife,
     PackGOD,JakePaul,Jake,PaulJakePaul,SamGaming01,Veshreny,WWE,WorldWrestlingEntertainment,
     Smosh,DadsSpeed,TopperGuild,InternetAnarchist,GuavaJuice,FortniteYoutubers,Sypherpk,LiveSPEEDY,
-    AdenRoss,Preston,JohnnieJuilbert,YouTube Movies,AnnoyingOrange,JackSepticeye,JackFilms,BBNo$,
+    AdenRoss,Preston,JohnnieJuilbert,YouTubeMovies,AnnoyingOrange,JackSepticeye,JackFilms,BBNo$,
     Unspeakable,MarkRober,TheFilmTheorist,TheGameTheorist,Minecraft,TheBoys,JTMusic,DAFUQBoom!?,
     AIMIN,Robby,BrentTV,EYStream,Fortnite,Ninja,SunnyV2,N30N,SamFrank,Dream,Technoblade,@bbauska,
     RyanTrhan,Stellar,DJCook,AnthonyMadia,AnthonyIlla,SmoshGaming,SmoshPit,SmoshCast,Fred,cellardoor,
     BriansBlog,CellarDoor,Silus,GW,Gaming,World,SilusGamingWorld,SilusGW,#Silus-GW,#cellardoor,bbauska,
     #SilusGamingWorld,#SilusGW,gluttony,selfishness,#bbauska,#silas,#silys,#sylus,#sylas,#sylusgw,
-    #silasGW,#silasgamingworld,roblox,#roblox">
+    #silasGW,#silasgamingworld,roblox,#roblox,AJWorld,Packzilla">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   <meta name="robots" content="index, follow">
   <link rel="manifest" href="manifest.json">
